<resources>
    <string name="version">1.0.0</string>
    <string name="app_name">SalvageYardBarcoding3</string>
    <string name="action_settings">Settings</string>
    <string name="ime_name">KTDemo</string>
	<string name="connect">Connect Scanner</string>
	<string name="setting">Settings</string>
	<string name="synchronize">Synchronize</string>
	<string name="hello"></string>
	<string name="select_device">Select a Scanner to connect</string>
	<string name="button_scan">Scan for devices</string>
	<string name="scanning">Scanning for devices ...</string>
	<string name="title_other_devices">Other available devices</string>
	<string name="title_paired_devices">Paired Devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Online Scanner: </string>
    <string name="title_not_connected">Scanner Disconnected</string>
    <string name="moveparts">Move</string>
    <string name="pullparts">Pull</string>
    <string name="shipinspectparts">Ship Inspect</string>
    <string name="stageinspectparts">Stage Inspect</string>
    <string name="gradeparts">Grade</string>
    <string name="tracking">Tracking</string>
<string name="title_info_preference">Scanner Information</string>
<string name="summary_info_preference">Display Scanner information</string>
<string name="title_other_preference">Basic settings</string>
<string name="summary_other_preference">Set miscellaneous options</string>
    <string name="title_record_preference">Record Delimiter</string>
    <string name="summary_record_preference">Choose delimiter of each record</string>
    <string name="dialog_title_record_preference">Choose one</string>
    <string-array name="entries_record_preference">
        <item>NONE</item>
        <item>LF</item>
        <item>CR</item>
        <item>TAB</item>
        <item>CR+LF</item>
    </string-array>
    <string-array name="entryvalues_record_preference">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>          
    </string-array>
    <string name="title_data_preference">Data Delimiter</string>
    <string name="summary_data_preference">Choose delimiter of each data</string>
    <string name="dialog_title_data_preference">Choose one</string>
    <string-array name="entries_data_preference">
        <item>NONE</item>
        <item>TAB</item>
        <item>SPACE</item>
        <item>COMMA</item>
        <item>SEMICOLON</item>
    </string-array>
    <string-array name="entryvalues_five_preference">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>          
    </string-array>
<string name="title_button_preference">Scan Button Lock</string>
<string name="summary_button_preference">Enable or disable scan button lock feature</string>
<string name="title_config_preference">Scanner Configuration</string>
<string name="summary_config_preference">Configure Scanner options</string>
<string name="title_serialno_preference">Serial number</string>
<string name="title_fwversion_preference">Firmware version</string>
<string name="title_macaddress_preference">Bluetooth MAC address</string>
<string name="title_btversion_preference">Bluetooth firmware version</string>
<string name="title_memory_preference">Memory status</string>
<string name="title_battery_preference">Battery capacity</string>
<string name="title_autoconnect_preference">Auto Connect</string>
<string name="summary_autoconnect_preference">Auto connect Scanner</string>
<string name="menu">KDC Configuration</string>
<string name="menu_preferences">Scanner Menu Configuration</string>
<string name="title_symbol_preference">Set Barcodes</string>
<string name="summary_symbol_preference">Select barcode symbology to be decoded</string>
<string name="title_option_preference">Barcode Options</string>
<string name="summary_option_preference">Change symbology options</string>
<string name="title_scan_preference">Scan Options</string>
<string name="summary_scan_preference">Change barcode scanner options</string>
<string name="title_dataprocess_preference">Data Process</string>
<string name="summary_dataprocess_preference">Edit barcode data</string>
<string name="title_bt_preference">Bluetooth Options</string>
<string name="summary_bt_preference">Change bluetooth device settings</string>
<string name="title_system_preference">System Settings</string>
<string name="summary_system_preference">Change general settings</string>
<string name="title_msr_preference">MSR Options</string>
<string name="summary_msr_preference">Change MSR settings</string>
<string name="sym_preferences">Symbology Selection</string>
<string name="title_oneD_preference">1D Symbology</string>
<string name="title_twoD_preference">2D Symbology</string>
<string name="title_post_preference">Postal Symbology</string>
<string name="title_ocr_preference">OCR Symbology</string>
    <string name="dialog_title_preference">Choose one</string>
    <string-array name="entries_ocr_preference">
        <item>OCR Off</item>
        <item>OCR A</item>
        <item>OCR B</item>
        <item>OCR US Currency</item>
        <item>OCR MICR E-138B</item>        
        <item>OCR Semi Font</item>
    </string-array>
    <string-array name="entryvalues_six_preference">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>          
        <item>5</item>
    </string-array>
<string name="title_codabar_preference">Codabar</string>
<string name="title_code11_preference">Code11</string>
<string name="title_code32_preference">Code32</string>
<string name="title_code35_preference">Code35</string>
<string name="title_code39_preference">Code39</string>
<string name="title_code93_preference">Code93</string>
<string name="title_code128_preference">Code128</string>
<string name="title_ean8_preference">EAN8</string>
<string name="title_ean8a_preference">EAN8 with Add-on</string>
<string name="title_ean13_preference">EAN13</string>
<string name="title_ean13b_preference">Bookland EAN 13</string>
<string name="title_ean13a_preference">EAN13 with Add-on</string>
<string name="title_gs1128_preference">GS1 128</string>
<string name="title_gs1c_preference">GS1 Composite</string>
<string name="title_i2of5_preference">I2of5</string>
<string name="title_m2of5_preference">Matrix 2of5</string>
<string name="title_msi_preference">MSI</string>
<string name="title_plessy_preference">Plessy</string>
<string name="title_posi_preference">PosiCode</string>
<string name="title_gs1o_preference">GS1 Omni</string>
<string name="title_gs1l_preference">GS1 Limited</string>
<string name="title_gs1e_preference">GS1 Expanded</string>
<string name="title_s2of5_preference">Straight 2of5 Industrial</string>
<string name="title_tlc39_preference">TLC39</string>
<string name="title_s2of5i_preference">Straight 2of5 IATA</string>
<string name="title_tele_preference">Telepen</string>
<string name="title_trio_preference">Triopic</string>
<string name="title_upca_preference">UPCA</string>
<string name="title_upcaa_preference">UPCA with Add-on</string>
<string name="title_upce_preference">UPCE</string>
<string name="title_upcea_preference">UPCE with Add-on</string>
<string name="title_upc0_preference">UPCE0</string>
<string name="title_upc1_preference">UPCE1</string>
<string name="title_itf14_preference">ITF 14</string>
<string name="title_aztec_preference">Aztec Code</string>
<string name="title_aztecr_preference">Aztec Runes</string>
<string name="title_coda_preference">Codeblock F</string>
<string name="title_code16_preference">Code16K</string>
<string name="title_code49_preference">Code49</string>
<string name="title_datam_preference">Data Matrix</string>
<string name="title_maxi_preference">MaxiCode</string>
<string name="title_mpdf_preference">Micro PDF417</string>
<string name="title_pdf_preference">PDF417</string>
<string name="title_qr_preference">QR Code</string>
<string name="title_han_preference">HanXin Code</string>
<string name="title_postnet_preference">Postnet</string>
<string name="title_planet_preference">Planet Code</string>
<string name="title_british_preference">British Post</string>
<string name="title_canada_preference">Canadian Post</string>
<string name="title_japan_preference">Japanese Post</string>
<string name="title_aus_preference">Australian Post</string>
<string name="title_china_preference">China Post</string>
<string name="title_kix_preference">Kix(Netherlands) Post</string>
<string name="title_korea_preference">Korea Post</string>
<string name="opt_preferences">Symbology Options</string>
<string name="title_codabarOpt_preference">Codabar Options</string>
	<string name="title_transmit_preference">Transmit start/stop character</string>
	<string name="title_cbcon_preference">Concatenation Options</string>
    <string-array name="entries_cbcon_preference">
        <item>Concatenation Off</item>    
        <item>Concatenation On</item>
        <item>Concatenation Require</item>
    </string-array>
    <string-array name="entryvalues_three_preference">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_verify_preference">Verify Check Digit Options</string>
    <string-array name="entries_verify_preference">
        <item>Do not verify check digit</item>
        <item>Verify check digit, but do not transmit</item>        
        <item>Verify check digit and transmit</item>
    </string-array>
<string name="title_code39Opt_preference">Code39 Options</string>
	<string name="title_append_preference">Append</string>
	<string name="title_fullascii_preference">Full ASCII</string>
<string name="title_upcaOpt_preference">UPCA Options</string>
	<string name="title_checkdigit_preference">Verify check digit</string>
	<string name="title_number_preference">Number system</string>
	<string name="title_2digit_preference">2 digit addenda</string>
	<string name="title_5digit_preference">5 digit addenda</string>
	<string name="title_addrequired_preference">Addenda required</string>
	<string name="title_addseparator_preference">Addenda separator</string>
	<string name="title_extcoupon_preference">Extended coupon code</string>
<string name="title_upceOpt_preference">UPCE Options</string>
	<string name="title_expand_preference">Expand</string>
<string name="title_ean8Opt_preference">EAN8 Options</string>
<string name="title_ean13Opt_preference">EAN13 Options</string>
	<string name="title_isbn_preference">ISBN Translate</string>
<string name="title_i2of5_verify_preference">Verify I2of5 check digit options</string>
<string name="title_code128_isbt_preference">Code128 ISBT Concatenation</string>
<string name="title_code11_checkdigit_preference">Verify Code11 check digit</string>
	<string name="title_output_preference">Telepen Output Options</string>
    <string-array name="entries_output_preference">
        <item>AM Output</item>
        <item>Original Output</item>
    </string-array>
    <string-array name="entryvalues_two_preference">
        <item>0</item>
        <item>1</item>
    </string-array>
<string name="title_gs1Opt_preference">GS1 Options</string>
	<string name="title_upce_ean_preference">UPCE/EAN Version</string>
	<string name="title_emulation_preference">Emulation Option</string>
	<string-array name="entries_emulation_preference">
        <item>GS1 Emulation Off</item>	
        <item>GS1-128 Emulation</item>        
        <item>GS1 Databar Emulation</item>
    </string-array>
</resources>